--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,12 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border: 1px solid red;
+}
+
+.header__logo-nav {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
@@ -126,6 +132,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 26px;
   letter-spacing: 0.78px;
   display: flex;
+}
+@media (max-width: 992px) {
+  .logo {
+    font-size: 24px;
+  }
 }
 .logo:hover {
   cursor: pointer;
@@ -139,6 +150,15 @@ h1, h2, h3, h4, h5, h6 {
   color: #000;
 }
 
+.header__menu {
+  margin: 0px 0px 0px 93px;
+}
+@media (max-width: 992px) {
+  .header__menu {
+    margin: 0px 0px 0px 88px;
+  }
+}
+
 .menu__list {
   display: flex;
   align-items: center;
@@ -146,6 +166,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .menu__item:not(:last-child) {
   margin: 0px 53px 0px 0px;
+}
+@media (max-width: 992px) {
+  .menu__item:not(:last-child) {
+    margin: 0px 50px 0px 0px;
+  }
 }
 
 .menu__link {
@@ -158,11 +183,20 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
 }
 
-.contacts {
+.header__contacts {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  justify-items: flex-end;
 }
 
+.contacts {
+  border: 1px solid green;
+}
+
+.contacts__item {
+  border: 1px solid blue;
+}
 .contacts__item:not(:last-child) {
   margin: 0px 30px 0px 0px;
 }
@@ -173,6 +207,42 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0.28px;
 }
 .contacts__link:hover {
-  color: #2196F3;
+  color: #2196f3;
   cursor: pointer;
+}
+
+.contacts__link-envelope {
+  padding: 0px 0px 0px 26px;
+}
+
+.contacts__link-smartphone {
+  padding: 0px 0px 0px 20px;
+}
+
+.contacts__icon-envelope {
+  min-height: 12px;
+  background-image: url("../images/header/envelope.svg");
+  background-repeat: no-repeat;
+  background-position: left center;
+}
+
+.contacts__icon-envelope--hover {
+  min-height: 12px;
+  background-image: url("../images/header/envelope_hover.svg");
+  background-repeat: no-repeat;
+  background-position: left center;
+}
+
+.contacts__icon-smartphone {
+  min-height: 16px;
+  background-image: url("../images/header/smartphone.svg");
+  background-repeat: no-repeat;
+  background-position: left center;
+}
+
+.contacts__icon-smartphone--hover {
+  min-height: 16px;
+  background-image: url("../images/header/smartphone_hover.svg");
+  background-repeat: no-repeat;
+  background-position: left center;
 }
