--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -23,8 +23,13 @@
    display: flex;
    align-items: center;
    justify-content: space-between;
+   border: 1px solid red;
 }
 
+.header__logo-nav {
+   display: flex;
+   align-items: center;
+}
 .header__logo {
    
 }
@@ -34,6 +39,10 @@
    letter-spacing: 0.78px;
    display: flex;
    
+   @media (max-width:992px) {
+      font-size: 24px;
+   }
+
    &:hover {
       cursor: pointer;
    }
@@ -45,8 +54,14 @@
    color: #000;
 }
 .header__menu {
+   margin: 0px 0px 0px 93px;
+
+   @media (max-width:992px) {
+      margin: 0px 0px 0px 88px;
+   }
 }
 .menu {
+   
 }
 .menu__list {
    display: flex;
@@ -56,6 +71,12 @@
    &:not(:last-child) {
       margin: 0px 53px 0px 0px;
    }
+
+   @media (max-width:992px) {
+      &:not(:last-child) {
+         margin: 0px 50px 0px 0px;
+      }   
+   }   
 }
 .menu__link {
    font-weight: 500;
@@ -69,23 +90,62 @@
 }
 
 .header__contacts {
+   display: flex;
+   align-items: center; 
+   flex-wrap: wrap;
+   justify-items: flex-end;
 }
 .contacts {
-   display: flex;
-   align-items: center;
+   border: 1px solid green;
 }
 .contacts__item {
+   border: 1px solid blue;
    &:not(:last-child) {
-      margin: 0px 30px 0px 0px;
+    margin: 0px 30px 0px 0px;  
    }
 }
+
 .contacts__link {
    color: #757575;
    font-weight: 500;
    letter-spacing: 0.28px;
-
    &:hover {
-      color: #2196F3;
+      color: #2196f3;
       cursor: pointer;
    }
+}
+
+.contacts__link-envelope {
+   padding: 0px 0px 0px 26px;   
+}
+
+.contacts__link-smartphone {
+   padding: 0px 0px 0px 20px;
+}
+.contacts__icon-envelope {
+   min-height: 12px;
+   background-image: url('../images/header/envelope.svg');
+   background-repeat: no-repeat;
+   background-position: left center;
+}
+
+.contacts__icon-envelope--hover {
+   min-height: 12px;
+   background-image: url('../images/header/envelope_hover.svg');
+   background-repeat: no-repeat;
+   background-position: left center;
+}
+
+.contacts__icon-smartphone {
+   min-height: 16px;
+   background-image: url('../images/header/smartphone.svg');
+   background-repeat: no-repeat;
+   background-position: left center;
+}
+
+.contacts__icon-smartphone--hover {
+   min-height: 16px;
+   background-image: url('../images/header/smartphone_hover.svg');
+   background-repeat: no-repeat;
+   background-position: left center;
 }
