--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,6 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid red;
 }
 
 .header__logo-nav {
@@ -129,13 +128,14 @@ h1, h2, h3, h4, h5, h6 {
 
 .logo {
   font-family: Raleway;
-  font-size: 26px;
-  letter-spacing: 0.78px;
+  font-size: 24px;
+  letter-spacing: 0.72px;
   display: flex;
 }
-@media (max-width: 992px) {
+@media (min-width: 992px) {
   .logo {
-    font-size: 24px;
+    font-size: 26px;
+    letter-spacing: 0.78px;
   }
 }
 .logo:hover {
@@ -183,39 +183,48 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
 }
 
-.header__contacts {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-items: flex-end;
+@media (min-width: 992px) {
+  .header__contacts {
+    display: flex;
+    align-items: center;
+  }
 }
 
-.contacts {
-  border: 1px solid green;
+@media (max-width: 992px) {
+  .contacts__item:not(:last-child) {
+    margin: 0px 0px 10px 0px;
+  }
 }
-
-.contacts__item {
-  border: 1px solid blue;
-}
-.contacts__item:not(:last-child) {
-  margin: 0px 30px 0px 0px;
+@media (min-width: 992px) {
+  .contacts__item:not(:last-child) {
+    margin: 0px 30px 0px 0px;
+  }
 }
 
 .contacts__link {
   color: #757575;
   font-weight: 500;
-  letter-spacing: 0.28px;
+  letter-spacing: 0.24px;
+  font-size: 12px;
 }
 .contacts__link:hover {
   color: #2196f3;
   cursor: pointer;
 }
+@media (min-width: 992px) {
+  .contacts__link {
+    font-size: 14px;
+    letter-spacing: 0.28px;
+  }
+}
 
 .contacts__link-envelope {
+  line-height: 12px;
   padding: 0px 0px 0px 26px;
 }
 
 .contacts__link-smartphone {
+  line-height: 16px;
   padding: 0px 0px 0px 20px;
 }
 
@@ -237,12 +246,12 @@ h1, h2, h3, h4, h5, h6 {
   min-height: 16px;
   background-image: url("../images/header/smartphone.svg");
   background-repeat: no-repeat;
-  background-position: left center;
+  background-size: contain;
 }
 
 .contacts__icon-smartphone--hover {
   min-height: 16px;
   background-image: url("../images/header/smartphone_hover.svg");
   background-repeat: no-repeat;
-  background-position: left center;
+  background-size: contain;
 }
