--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,29 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 15px;
 }
 
+._ibg {
+  position: relative;
+}
+._ibg img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 /*------HEADER------------------------------------------*/
+.header {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 50;
+}
+
 .header__body {
   min-height: 80px;
   display: flex;
@@ -311,7 +333,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     height: 4px;
     left: 0px;
-    bottom: -28px;
+    bottom: -33px;
     background-color: #2196F3;
     border-radius: 2px;
   }
@@ -467,4 +489,61 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
   line-height: 122.222%;
   letter-spacing: 0.36px;
+}
+
+/*----PAGE*/
+.page {
+  flex: 1 1 auto;
+}
+
+/*----MAIN-BLOCK*/
+.main-block {
+  position: relative;
+}
+
+.main-block__body {
+  margin: 80px 0px 0px 0px;
+  padding: 200px 0px 200px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+}
+
+.main__block__title {
+  max-width: 696px;
+  margin: 0px 0px 30px 0px;
+  color: #FFF;
+  text-align: center;
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 136.364%;
+  letter-spacing: 2.64px;
+  text-transform: uppercase;
+}
+
+.main-block__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 32px;
+  min-height: 50px;
+  border-radius: 4px;
+  background-color: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1490196078);
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 187.5%;
+  letter-spacing: 0.96px;
+}
+
+.main-block__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
