--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -407,31 +407,40 @@ body {
 /*----PAGE*/
 .page {
    flex: 1 1 auto;
+   position: relative;
 }
 .page__main-block {
-
+   
 }
 
 
 /*----MAIN-BLOCK*/
 
-.main-block {
-   position: relative;
-}
+.main-block {  
+   position: relative; 
+   margin: 80px 0px 0px 0px;
+   
+   z-index: 1;
+
+   @media (max-width: 767px) {
+      margin: 60px 0px 0px 0px;   
+   }
+}  
+
 .main-block__container {
 }
 
 .main-block__body {
-   margin: 80px 0px 0px 0px;
-   padding: 200px 0px 200px 0;
+   padding: 17% 0px 17% 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
+   justify-content: center; 
    position: relative;
    z-index: 2;  
 }
 .main__block__title {
-   max-width: 696px;
+   max-width: 59.5%;
    margin: 0px 0px 30px 0px;
    color: #FFF;
    text-align: center;
@@ -440,6 +449,12 @@ body {
    line-height: 136.364%;
    letter-spacing: 2.64px;
    text-transform: uppercase;
+
+   @media (max-width: 992px) {
+      font-size: 26px;
+      line-height: 161.538%;
+      letter-spacing: 1.56px;
+   }
 
 }
 .main-block__button {
@@ -450,22 +465,29 @@ body {
    min-height: 50px;
    border-radius: 4px;
    background-color: #2196F3;
-   box-shadow: 0px 4px 4px 0px #00000026;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
    color: #FFF;
    text-align: center;
    font-size: 16px;
    font-weight: 700;
    line-height: 187.5%;
    letter-spacing: 0.96px;
+
+   @media (max-width: 992px) {
+      padding: 5px 24px;   
+   }
+
 }
-.main-block__image {
+.main-block__image {     
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
+
+   & img {
+      object-position: left top;
+      opacity: 0.95;
+   }
 }
 
-.main-block__image img{
-   
-}
