--- a/css/styles.css
+++ b/css/styles.css
@@ -494,19 +494,34 @@ h1, h2, h3, h4, h5, h6 {
 /*----PAGE*/
 .page {
   flex: 1 1 auto;
-  position: relative;
 }
 
 /*----MAIN-BLOCK*/
 .main-block {
-  position: relative;
   margin: 80px 0px 0px 0px;
-  z-index: 1;
+  background-image: url("../images/mainblock/main_desktop.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
 }
 @media (max-width: 767px) {
   .main-block {
     margin: 60px 0px 0px 0px;
   }
+}
+@media (max-width: 1270px) {
+  .main-block {
+    background-image: url("../images/mainblock/main_tablet.jpg");
+  }
+}
+@media (max-width: 550px) {
+  .main-block {
+    background-image: url("../images/mainblock/main_mobile.jpg");
+  }
+}
+
+.main-block__background {
+  background-color: rgba(47, 48, 58, 0.4);
 }
 
 .main-block__body {
@@ -515,8 +530,6 @@ h1, h2, h3, h4, h5, h6 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
-  z-index: 2;
 }
 
 .main__block__title {
@@ -558,17 +571,4 @@ h1, h2, h3, h4, h5, h6 {
   .main-block__button {
     padding: 5px 24px;
   }
-}
-
-.main-block__image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-.main-block__image img {
-  -o-object-position: left top;
-     object-position: left top;
-  opacity: 0.95;
 }
