--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -407,25 +407,38 @@ body {
 /*----PAGE*/
 .page {
    flex: 1 1 auto;
-   position: relative;
 }
 .page__main-block {
    
 }
 
-
 /*----MAIN-BLOCK*/
 
-.main-block {  
-   position: relative; 
+.main-block { 
    margin: 80px 0px 0px 0px;
-   
-   z-index: 1;
 
    @media (max-width: 767px) {
       margin: 60px 0px 0px 0px;   
    }
+
+   background-image: url('../images/mainblock/main_desktop.jpg'); 
+   
+   @media (max-width: 1270px) {
+      background-image: url('../images/mainblock/main_tablet.jpg'); 
+   }
+   
+   @media (max-width: 550px) {
+      background-image: url('../images/mainblock/main_mobile.jpg'); 
+   }
+
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: left;
 }  
+
+.main-block__background {
+   background-color: rgba(47, 48, 58, 0.40);
+}
 
 .main-block__container {
 }
@@ -435,10 +448,9 @@ body {
    display: flex;
    flex-direction: column;
    align-items: center;
-   justify-content: center; 
-   position: relative;
-   z-index: 2;  
+   justify-content: center;
 }
+
 .main__block__title {
    max-width: 59.5%;
    margin: 0px 0px 30px 0px;
@@ -478,16 +490,5 @@ body {
    }
 
 }
-.main-block__image {     
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   top: 0;
-   left: 0;
 
-   & img {
-      object-position: left top;
-      opacity: 0.95;
-   }
-}
 
