--- a/css/styles.css
+++ b/css/styles.css
@@ -136,10 +136,10 @@ h1, h2, h3, h4, h5, h6 {
 .header {
   position: fixed;
   width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
-  z-index: 50;
+  z-index: 100;
+  background-color: #FFF;
 }
 
 .header__body {
@@ -571,4 +571,60 @@ h1, h2, h3, h4, h5, h6 {
   .main-block__button {
     padding: 5px 24px;
   }
+}
+
+/*----ADVANTAGES*/
+.advantages {
+  background-color: #FFF;
+  padding: 94px 0px;
+}
+@media (max-width: 1200px) {
+  .advantages {
+    padding: 60px 0px;
+  }
+}
+
+.advantages__row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px -15px;
+}
+
+.advantages__column {
+  flex: 0 1 25%;
+  padding: 0px 15px;
+}
+@media (max-width: 1200px) {
+  .advantages__column {
+    flex: 1 1 50%;
+    margin: 0px 0px 30px 0px;
+  }
+}
+@media (max-width: 497px) {
+  .advantages__column {
+    flex: 1 1 100%;
+  }
+}
+
+.advantages__icon {
+  border-radius: 4px;
+  background: #F5F4FA;
+  padding: 25px 100px;
+  margin: 0px 0px 30px 0px;
+}
+
+.advantages__description > :not(:last-child) {
+  margin: 0px 0px 10px 0px;
+}
+
+.advantages__title {
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+}
+
+.advantages__text {
+  color: #757575;
+  font-weight: 400;
+  line-height: 171.429%;
+  letter-spacing: 0.42px;
 }
