--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,10 +39,10 @@ body {
 .header {
    position: fixed;
    width: 100%;
-   height: 100%;
    top: 0;
    left: 0;
-   z-index: 50;
+   z-index: 100;
+   background-color: #FFF;
 }
 
 .header__container {
@@ -53,7 +53,7 @@ body {
    display: flex;
    align-items: center;
    justify-content: space-between;
-
+   
    @media (max-width:767px) {
       min-height: 60px;   
    }
@@ -408,15 +408,18 @@ body {
 .page {
    flex: 1 1 auto;
 }
-.page__main-block {
-   
+.page__main-block {   
+}
+
+.page__advantages {
+
 }
 
 /*----MAIN-BLOCK*/
 
 .main-block { 
    margin: 80px 0px 0px 0px;
-
+   
    @media (max-width: 767px) {
       margin: 60px 0px 0px 0px;   
    }
@@ -491,4 +494,58 @@ body {
 
 }
 
+/*----ADVANTAGES*/
 
+.advantages {
+   background-color: #FFF;
+   padding: 94px 0px;
+
+   @media (max-width: 1200px) {
+      padding: 60px 0px;   
+   }
+}
+.advantages__container {
+}
+
+.advantages__row {
+   display: flex;
+   flex-wrap: wrap;
+   margin: 0px -15px;
+}
+.advantages__column {
+   flex: 0 1 25%;
+   padding: 0px 15px;
+
+   @media (max-width: 1200px) {
+      flex: 1 1 50%;   
+      margin: 0px 0px 30px 0px;
+   }
+
+   @media (max-width: 497px) {
+      flex: 1 1 100%;   
+   }
+}
+.advantages__item {
+}
+.advantages__icon {
+   border-radius: 4px;
+   background: #F5F4FA;
+   padding: 25px 100px;
+   margin: 0px 0px 30px 0px;
+}
+
+.advantages__description {
+   &>:not(:last-child) {
+      margin: 0px 0px 10px 0px;
+   }
+}
+.advantages__title {
+   letter-spacing: 0.42px;
+   text-transform: uppercase;
+}
+.advantages__text {
+   color: #757575;
+   font-weight: 400;
+   line-height: 171.429%;
+   letter-spacing: 0.42px;
+}
