--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -515,15 +515,15 @@ body {
 .advantages__row {
    display: flex;
    flex-wrap: wrap;
-   margin: 0px -15px;
+   margin: 0px -15px -30px;
 }
 .advantages__column {
    flex: 0 1 25%;
    padding: 0px 15px;
+   margin: 0px 0px 30px 0px;
 
    @media (max-width: 1200px) {
       flex: 1 1 50%;   
-      margin: 0px 0px 30px 0px;
    }
 
    @media (max-width: 497px) {
@@ -535,7 +535,11 @@ body {
 .item-advantages__icon {
    border-radius: 4px;
    background: #F5F4FA;
-   padding: 25px 100px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   // min-height: 120px;
+   padding: 25px 0px;
    margin: 0px 0px 30px 0px;
 }
 
@@ -596,6 +600,10 @@ body {
 .team {
    background-color: #F5F4FA;
    padding: 94px 0px;
+
+   @media (max-width: 1110px) {
+      padding: 60px 0px;   
+   }
 }
 .team__container {
 }
@@ -604,15 +612,33 @@ body {
    font-size: 36px;
    letter-spacing: 1.08px;
    margin: 0px 0px 50px 0px;
+
+   @media (max-width: 1110px) {
+      margin: 0px 0px 50px 0px;
+   }   
+
+   @media (max-width: 560px) {
+      margin: 0px 0px 30px 0px;
+   }   
 }
 .team__row {
    display: flex;
    flex-wrap: wrap;
-   margin: 0px -15px;
+   justify-content: center;
+   margin: 0px -15px -30px;
 }
 .team__column {
-   padding: 0px 15px;
+   padding: 0px 15px 30px;
    flex: 0 1 25%;   
+   max-width: 100%;
+
+   @media (max-width: 1110px) {
+      flex: 0 1 50%;    
+   }
+
+   @media (max-width: 500px) {
+      flex: 0 1 100%;       
+   }
 }
 .team__item {
 }
@@ -631,6 +657,7 @@ body {
    font-size: 16px;
    letter-spacing: 0.48px;
    margin: 0px 0px 28px 0px;
+   padding: 0px 10px;
 
    &>:not(:last-child) {
       margin: 0px 0px 10px 0px;
@@ -643,13 +670,15 @@ body {
    color: #757575;
    font-weight: 400;
 }
-.item-team__social {
-   padding: 0px 32px;
+.social-item {
+   max-width: 202px;
+   padding: 0px 10px;
+   margin: 0 auto;
    display: flex;
-   margin: 0px -17px;
-   img {      
-      display: block;
-      padding: 0px 17px;
-      flex: 0 0 25%;      
-   }
+   justify-content: space-between;
+     .advantages__item {      
+         display: block;
+         height: 20px;
+         flex: 0 0 25%;      
+      }
 }
