--- a/css/styles.css
+++ b/css/styles.css
@@ -381,7 +381,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0px 0px 32px 0px;
   }
   .contacts__item:last-child > a {
-    font-size: 34px;
+    font-size: 30px;
     letter-spacing: 0.68px;
   }
 }
@@ -461,6 +461,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .header__social {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: 0px -10px;
 }
 @media (min-width: 767px) {
@@ -684,7 +686,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 1110px) {
   .team__header {
-    margin: 0px 0px 50px 0px;
+    margin: 0px 0px 30px 0px;
+    font-size: 28px;
+    letter-spacing: 0.84px;
   }
 }
 @media (max-width: 560px) {
@@ -755,8 +759,60 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   justify-content: space-between;
 }
-.social-item .advantages__item {
-  display: block;
-  height: 20px;
-  flex: 0 0 25%;
+
+/*----CLIENTS*/
+.clients {
+  background-color: #FFF;
+  padding: 94px 0px;
+}
+@media (max-width: 1110px) {
+  .clients {
+    padding: 60px 0px;
+  }
+}
+
+.clients__header {
+  text-align: center;
+  font-size: 36px;
+  letter-spacing: 1.08px;
+  margin: 0px 0px 50px 0px;
+}
+@media (max-width: 1110px) {
+  .clients__header {
+    margin: 0px 0px 30px 0px;
+    font-size: 28px;
+    letter-spacing: 0.84px;
+  }
+}
+
+.clients__row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0px -15px -30px;
+}
+
+.clients__column {
+  flex: 0 1 16.6667%;
+  padding: 0px 15px;
+  margin: 0px 0px 30px 0px;
+}
+@media (max-width: 1110px) {
+  .clients__column {
+    flex: 0 1 33.333%;
+  }
+}
+@media (max-width: 500px) {
+  .clients__column {
+    flex: 0 1 50%;
+  }
+}
+
+.clients__item {
+  padding: 15px 0px;
+  border-radius: 4px;
+  border: 1px solid #AFB1B8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
