--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -749,3 +749,58 @@ body {
 }
 .item-column__link {
 }
+
+/*----FOOTER*/
+.footer {
+   background-color: #2F303A;
+   padding: 72px 0px 60px 0px;;
+}
+.footer__container {
+}
+
+.footer__body {
+}
+.footer__about-us {
+}
+.about-us {
+}
+.about-us__logo {
+}
+.logo {
+}
+.logo__web {
+}
+.logo__studio {
+}
+.about-us__contacts {
+}
+.contacts-footer {
+}
+.contacts-footer__address {
+}
+.contacts-footer__email {
+}
+.contacts-footer__phone {
+}
+.footer__social {
+}
+.social-footer {
+}
+.social-footer__header {
+}
+.footer-list {
+}
+.footer-list__link {
+}
+.footer__form {
+}
+.form-footer {
+}
+.form-footer__header {
+}
+.form-footer__form {
+}
+.form {
+}
+.form__subscription {
+}
