--- a/css/styles.css
+++ b/css/styles.css
@@ -816,3 +816,9 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   align-items: center;
 }
+
+/*----FOOTER*/
+.footer {
+  background-color: #2F303A;
+  padding: 72px 0px 60px 0px;
+}
