--- a/css/styles.css
+++ b/css/styles.css
@@ -822,3 +822,161 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #2F303A;
   padding: 72px 0px 60px 0px;
 }
+
+.footer__body {
+  display: flex;
+  flex-wrap: wrap;
+}
+@media (max-width: 992px) {
+  .footer__body {
+    justify-content: space-around;
+  }
+}
+
+.footer__about-us {
+  flex: 0 1 19.74%;
+  margin: 0px 5.98% 0px 0px;
+}
+@media (max-width: 992px) {
+  .footer__about-us {
+    margin: 0px 0px 60px 0px;
+  }
+}
+
+.about-us__logo {
+  display: block;
+  margin: 0px 0px 20px 0px;
+}
+
+.logo__studio-footer {
+  color: #FFF !important;
+}
+
+.contacts-footer__address {
+  display: block;
+  color: #FFF;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 171.429%;
+  letter-spacing: 0.42px;
+  margin: 0px 0px 9px 0px;
+}
+
+.contacts-footer__info {
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-style: normal;
+  line-height: 171.429%;
+  letter-spacing: 0.42px;
+}
+.contacts-footer__info > :not(:last-child) {
+  margin: 0px 0px 9px 0px;
+}
+
+.contacts-footer__email {
+  color: inherit;
+  display: block;
+}
+
+.contacts-footer__phone {
+  color: inherit;
+  display: block;
+}
+
+.footer__social {
+  flex: 0 1 17.6%;
+  margin: 0px 7.95% 0px 0px;
+}
+@media (max-width: 992px) {
+  .footer__social {
+    margin: 0px 0px 0px 0px;
+  }
+}
+
+.social-footer__header {
+  color: #FFF;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  margin: 0px 0px 32px 0px;
+}
+
+.footer-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-list__link {
+  position: relative;
+  z-index: 10;
+}
+.footer-list__link:before {
+  content: "";
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  position: absolute;
+  top: -12px;
+  left: -12px;
+  z-index: 5;
+  transition: all 0.5s ease 0s;
+}
+.footer-list__link:hover:before {
+  background-color: rgba(33, 150, 243, 0.5);
+}
+
+.footer__form {
+  flex: 0 1 48.72%;
+}
+@media (max-width: 992px) {
+  .footer__form {
+    flex: 1 1 100%;
+  }
+}
+
+.form-footer__header {
+  color: #FFF;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  margin: 0px 0px 20px 0px;
+}
+
+.form__subscription {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.form__subscription input {
+  margin: 0px 12px 0px 0px;
+  flex: 1 1 auto;
+  height: 50px;
+  padding: 0px 0px 0px 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(33, 150, 243, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 125%;
+  letter-spacing: 0.48px;
+}
+.form__subscription button {
+  flex: 0 0 200px;
+  height: 50px;
+  border-radius: 4px;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 187.5%;
+  letter-spacing: 0.96px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form__subscription button img {
+  padding: 0px 0px 0px 10px;
+}
