--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -759,12 +759,27 @@ body {
 }
 
 .footer__body {
+   display: flex;
+   flex-wrap: wrap;
+
+   @media (max-width: 992px) {
+      justify-content: space-around;
+   }
+   // justify-content: space-between;
 }
 .footer__about-us {
+   flex: 0 1 19.74%;
+   margin: 0px 5.98% 0px 0px;
+
+   @media (max-width:992px) {
+      margin: 0px 0px 60px 0px;  
+   }
 }
 .about-us {
 }
 .about-us__logo {
+   display: block;
+   margin: 0px 0px 20px 0px;
 }
 .logo {
 }
@@ -772,35 +787,139 @@ body {
 }
 .logo__studio {
 }
+.logo__studio-footer {
+   color: #FFF !important;
+}
 .about-us__contacts {
 }
 .contacts-footer {
 }
 .contacts-footer__address {
+   display: block;
+   color: #FFF;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 171.429%;
+   letter-spacing: 0.42px;
+   margin: 0px 0px 9px 0px;
+}
+
+.contacts-footer__info {
+   color: rgba(255, 255, 255, 0.60);
+   font-weight: 400;
+   font-style: normal;
+   line-height: 171.429%;
+   letter-spacing: 0.42px;
+   >:not(:last-child) {
+      margin: 0px 0px 9px 0px;
+   }
 }
 .contacts-footer__email {
+   color: inherit;
+   display: block;   
 }
 .contacts-footer__phone {
+   color: inherit;
+   display: block; 
 }
 .footer__social {
+   flex: 0 1 17.6%;
+   margin: 0px 7.95% 0px 0px;
+
+   @media (max-width: 992px) {   
+      margin: 0px 0px 0px 0px;
+   }
 }
 .social-footer {
 }
 .social-footer__header {
+   color: #FFF;
+   letter-spacing: 0.42px;
+   text-transform: uppercase;
+   margin: 0px 0px 32px 0px;
 }
 .footer-list {
+   display: flex;
+   justify-content: space-between;
 }
 .footer-list__link {
+   position: relative;
+   z-index: 10;
+   &:before {
+      content: '';
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.10);
+      position: absolute;
+      top: -12px;
+      left: -12px;
+      z-index: 5;
+      transition: all 0.5s ease 0s;
+   }
+
+   &:hover:before {
+         background-color: rgb(33, 150, 243, 0.5);
+   }
 }
 .footer__form {
+   flex: 0 1 48.72%;
+
+   @media (max-width:992px) {
+      flex: 1 1 100%;   
+   }
 }
 .form-footer {
 }
 .form-footer__header {
+   color: #FFF;
+   letter-spacing: 0.42px;
+   text-transform: uppercase;
+   margin: 0px 0px 20px 0px;
 }
 .form-footer__form {
 }
 .form {
 }
 .form__subscription {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+
+   input {      
+      margin: 0px 12px 0px 0px;
+      flex: 1 1 auto;
+      height: 50px;
+      padding: 0px 0px 0px 16px;
+      border-radius: 4px;
+      border: 1px solid rgba(255, 255, 255, 0.30);
+      background: rgba(33, 150, 243, 0.00);
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+      color: rgba(255, 255, 255, 0.60);
+      font-size: 16px;
+      font-weight: 400;
+      line-height:  125%;
+      letter-spacing: 0.48px;
+   }
+
+   button {
+      flex: 0 0 200px;
+      height: 50px;
+      border-radius: 4px;
+      background: #2196F3;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+      color: #FFF;
+      text-align: center;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 187.5%;
+      letter-spacing: 0.96px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+         padding: 0px 0px 0px 10px;
+      }
+   }
 }
