--- a/css/styles.css
+++ b/css/styles.css
@@ -736,7 +736,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   font-size: 16px;
   letter-spacing: 0.48px;
-  margin: 0px 0px 28px 0px;
+  margin: 0px 0px 16px 0px;
   padding: 0px 10px;
 }
 .item-team__text > :not(:last-child) {
@@ -754,16 +754,29 @@ h1, h2, h3, h4, h5, h6 {
 
 .social-item {
   max-width: 202px;
-  padding: 0px 10px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
 }
 
-.social-item__link:hover svg path {
-  fill: white;
+.social-item__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.social-item__link:hover svg rect {
+.social-item__link .social-item__link-circle {
+  position: relative;
+}
+.social-item__link .social-item__link-icon {
+  position: absolute;
+}
+.social-item__link .social-item__link-icon path {
+  transition: all 0.5s ease 0s;
+}
+.social-item__link:hover .social-item__link-circle path {
+  fill: #2196F3;
+}
+.social-item__link:hover .social-item__link-icon path {
   fill: white;
 }
 
