--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -663,7 +663,7 @@ body {
    text-align: center;
    font-size: 16px;
    letter-spacing: 0.48px;
-   margin: 0px 0px 28px 0px;
+   margin: 0px 0px 16px 0px;
    padding: 0px 10px;
 
    &>:not(:last-child) {
@@ -679,18 +679,33 @@ body {
 }
 .social-item {
    max-width: 202px;
-   padding: 0px 10px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
 }
 
 .social-item__link {
-   &:hover svg path {
-      fill: white;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+   .social-item__link-circle {
+      position: relative;
    }
 
-   &:hover svg rect {
+   .social-item__link-icon {
+      position: absolute;      
+   }
+
+   & .social-item__link-icon path {
+      transition: all 0.5s ease 0s;
+   }
+
+   &:hover .social-item__link-circle path {
+      fill: #2196F3
+   }
+
+   &:hover .social-item__link-icon path {
       fill: white;
    }
 }
