--- a/css/styles.css
+++ b/css/styles.css
@@ -1054,24 +1054,60 @@ h1, h2, h3, h4, h5, h6 {
 /*----PORTFOLIO*/
 .portfolio {
   flex: 1 1 auto;
-  margin: 174px 0px 94px 0px;
+  margin: 144px 0px 94px 0px;
+}
+@media (max-width: 902px) {
+  .portfolio {
+    margin: 60px 0px 60px 0px;
+  }
 }
 
 .portfolio__body {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(3, auto);
   grid-gap: 30px;
+}
+@media (max-width: 902px) {
+  .portfolio__body {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+@media (max-width: 594px) {
+  .portfolio__body {
+    grid-template-columns: repeat(1, auto);
+  }
+}
+
+.portfolio__item {
+  max-width: 370px;
+}
+
+.content-portfolio__text-body {
+  margin: 0px 0px 20px 0px;
+  background: rgba(33, 150, 243, 0.9);
 }
 
 .content-portfolio__description {
-  margin: 0px 0px 20px 0px;
   padding: 63px 24px;
   color: #FFF;
   font-size: 18px;
   font-weight: 400;
   line-height: 155.556%;
   letter-spacing: 0.54px;
-  background: rgba(33, 150, 243, 0.9);
+  overflow-y: hidden;
+  height: 294px;
+}
+@media (max-width: 1075px) {
+  .content-portfolio__description {
+    padding: 49px 24px;
+    font-size: 16px;
+  }
+}
+@media (max-width: 594px) {
+  .content-portfolio__description {
+    padding: 77px 24px;
+    font-size: 16px;
+  }
 }
 
 .content-portfolio__header {
@@ -1090,8 +1126,14 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.875;
+  margin: 0px 0px 20px 0px;
 }
 
 .content-portfolio__icon {
   margin: 0px 0px 20px 0px;
+  position: relative;
+}
+.content-portfolio__icon img {
+  max-width: 100%;
+  min-height: 294px;
 }
